# bzedit

./: .gitignore  README.md  main.py  pyproject.toml
src/backend/: utils.py
src/backend/command/: __init__.py  _abstractcommand.py  _copy.py  _cut.py  _delete.py  _insert.py  _invoker.py  _paste.py  _redo.py  _save.py  _undo.py
src/backend/core/: __init__.py  _abstractengine.py  _abstractselection.py  _engine.py  _meta.py  _selection.py
src/backend/memento/: __init__.py  _abstractcaretaker.py  _abstractmemento.py  _abstractoriginator.py  _caretaker.py  _memento.py  _originator.py
src/bzedit/: config.py
src/frontend/: app.py  utils.py
src/frontend/frame/: __init__.py  _textarea.py  _toolbar.py
test/: conftest.py
test/src/backend/core/: test_engine.py  test_selection.py
tests/: conftest.py
tests/fixtures/: command.py  engine.py  memento.py  meta.py  selection.py
tests/src/backend/: test_utils.py
tests/src/backend/command/: test_copy.py  test_cut.py  test_delete.py  test_insert.py  test_invoker.py  test_paste.py  test_redo.py  test_save.py  test_undo.py
tests/src/backend/core/: test_engine.py  test_meta.py  test_selection.py
tests/src/backend/memento/: test_caretaker.py  test_originator.py
