[project]
name = "bzedit"
version = "0.1.0"
description = "BzEdit (Breeze Editor) is a lightweight and smooth text editor, designed for fast and efficient editing."
authors = [
    {name = "Ali YARO",email = "ali.yaro@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "bzedit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
