[project]
name = "bzedit"
version = "0.1.0"
description = "BzEdit (Breeze Editor) is a lightweight and smooth text editor, designed for fast and efficient editing."
authors = [
    {name = "Ali YARO",email = "ali.yaro@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "bzedit", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.9.2"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
cache_dir = ".mypy_cache"
strict = true
pretty = true